--- a/AUTHORS
+++ b/AUTHORS
@@ -3,4 +3,4 @@
 
 Abel Fisseha <abeltoolit@gmail.com>
 Abel Fisseha <playoffabel@gmail.com>
-Meron Mamo <@gmail.com>
+Meron Mamo <merryta251@gmail.com>
